--- a/Chapter4.tex
+++ b/Chapter4.tex
@@ -663,7 +663,7 @@ Word sense induction and disambiguation results, using fusion enriched matrices 
 In the unsupervised evaluation results, we include an interesting baseline which had also the best performing results. The baseline consists in assigning one cluster per word (or {1c1word}), i.e., it simply assigns a single sense to all the test instances of a word. This baseline was not beat during the competition. On the other had, for the supervised results, we include the Most Frequent Sense (or MFS) baseline which tags every test instance with the sense that occurred most often in the training corpus of the competition. Besides these baselines, we included also the best performing systems' results for both of the evaluations.
 
 
-We experimentally set $\beta=0.90$ and $\gamma=50$. Remember that $\beta$ controls the relevance of each matrix in the late fusion binary operator $L(\beta\cdot A, (1-\beta)\cdot B)$ and $\gamma$ control number of nearest neighbors to take from the first operand of the cross fusion $\mathbf{K}(A,\gamma) \times B$. The parameter $\alpha$ of the early fusion operator is not employed (i.e., we concatenate matrices without weighting them) unless the value of $\alpha$ is explicitly specified.
+We experimentally set $\beta=0.90$ and $\gamma=50$. Remember that $\beta$ controls the relevance of each matrix in the late fusion binary operator $L(\beta\cdot A, (1-\beta)\cdot B)$ and $\gamma$ control the number of nearest neighbors to take from the first operand of the cross fusion $\mathbf{K}(A,\gamma) \times B$. The parameter $\alpha$ of the early fusion operator is not employed (i.e., we concatenate matrices without weighting them) unless the value of $\alpha$ is explicitly specified.
 %Specifically regarding this WSI/WSD task, late fusion, when the first matrix  is deemed more relevant than the second one, the performance is higher. This may be due to the fact that, in this task, the feature matrices rows contain types (that is, each line represent an unique word), and thus they are more dense, which may entail more noisy data. By reducing the relevance of the second matrix in late fusion, we are effectively attenuating the less important information.
 
 %Concerning the parameter $\gamma=50$ in cross fusion (remember that $\gamma$ controls the number of top nearest neighbors in the cross fusion operation: $X_{\gamma}(A,B) = \mathbf{K}(A,\gamma) \times B$), again due to the denser characteristic of the matrices, we believe there is a larger quantity of true similar words that are useful to project information into another matrix, through cross fusion.  
@@ -674,7 +674,7 @@ In the following paragraphs, we will discuss these results obtained. We note tha
 Regarding Single Features (SF), $\mlex$ comes on top of $\msyn$ again, looking at both recall and F-measure regarding all the words (nouns and verbs). Nonetheless, $\msyn$ performs better for both metrics in terms of verbs. Thus, syntactic dependencies can provide useful information  about verbs. This may be because different senses for different verbs can be better found using dependencies because the differences among head-dependent relations is clearer than between lexical windows of words. 
 
 \subparagraph{First Degree Fusion}
-On the 1F level, we see that the early fusion techniques in this task does not surpass the independent features representation in none of the metrics. This is unexpected as in NER, the early fusion operator was actually the best baseline during the experiments. This may be due to the fact that the clustering algorithm is sensitive to the noise produced when adding both matrices together, thus reducing the quality of the clusters found. 
+On the 1F level, we see that the early fusion techniques in this task does not surpass the independent features' representation in none of the metrics. This is unexpected as in NER, the early fusion operator was actually the best baseline during the experiments. This may be due to the fact that the clustering algorithm is sensitive to the noise produced when adding both matrices together, thus reducing the quality of the clusters found. 
 
 In cross feature fusion, with respect to the supervised evaluation, the $X_F(\slex,\mlex)$ operator that performs as well as $\mlex$, while producing almost the same number of average senses as the true value (3.63 versus 2.87). Indeed, this operator does improves on nouns, although it has lower performance on verbs. We will see later that this is indeed the best performing fusion operator according to our H-measure.
 %
@@ -695,7 +695,7 @@ Concerning the all-words unsupervised F-measure, in this level, all the operatio
 \subparagraph{High Degree Fusion}
 As with the NER experiments on the HF level, the intuition in this stage is to recombine the best previous  operators in new fusion modalities. In this case, we present the best performing operations. We note that we tried other fusions but they were found to have low results. As an example of these failed configurations, we tried $E(\mlex,X_F(\slex,\mlex))$ both recombined through an early and a late fusion operations. Furthermore, in order to have coherence with the best result obtained in NER, we tried solving WSI/WSD using the Triple Early Double Late Cross Feature Fusion (or $EEELX_FLX_F$). Unfortunately, the results in this level were not as interesting as before. Nevertheless, we present the two most successful high degree fusion operators found. The two operators we test in this level do improve on the early fusion baseline. However, they are not able to improve over the 1c1word baseline. 
 
-Indeed, contrary to what we reported in the previous NER experiments, the best results are generally obtained in the 2F level, and not in the HF level, according to the all-word supervised recall and unsupervised F-measure. Still, it is clear that the best recombination of fusion operations (yield better results than our established baselines (single features and early fusion) and the MFS baseline.
+Indeed, contrary to what we reported in the previous NER experiments, the best results are generally obtained in the 2F level, and not in the HF level, according to the all-word supervised recall and unsupervised F-measure. Still, it is clear that the best recombination of fusion operations yield better results than our established baselines (single features and early fusion) and the MFS baseline.
 
 Specifically, regarding supervised recall, the operations $L(\mlex, X_F(\slex,\mlex))$ and $E(\mlex,L(\mlex,X_F(\slex,\mlex)))$ (with a performance of 79.5\%) surpass the MFS baseline (78.7\%), both single feature matrices $\mlex$ and $\msyn$ (79.2\%), and the early fusion trivial operation $E(\mlex,\msyn)$ ( with 78.7\%). Concerning the unsupervised F-measure, we do surpass our two baselines but not the 1c1word competition baseline. While considering this performance metric is harder to determine the best performing model. There are several fusion operations that match the performance of the 1c1word baseline, although the number of clusters produced is very close to one. This is the case of the $X_F(\ssyn,\mlex)$ and $X_S(\ssyn,\slex)$ operators, with 78.9\% F-measure and generating 1.08 and 1.01 clusters respectively. 
 
