--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -31,11 +31,13 @@ Finally, the proposed hypergraph, through its fusion representations, generate l
 
 \section{Future Work}
 The work we present still has several research paths to be explored.
-The hypergraph model itself could utilize different contexts, going further than syntactic or lexical contexts, for example using morphological or even phonological contexts for words or other utterances. Even more, the constituent-based contexts are surely open for improvement: trying more literature approaches or devising intelligent ways to leverage the information provided by this syntactic parse.
+The hypergraph model itself could utilize different contexts, going further than syntactic or lexical contexts, for example using morphological or even phonological contexts for words or other utterances. Even more, the constituent-based contexts are surely open for improvement: trying more literature approaches or devising intelligent ways to leverage the information provided by this syntactic parse.  Regarding the computationally implemented resource, which follows the proposed model guidelines, it would be interesting to leverage the information within by means of key-valued queries. The extracted information could be helpful to discover, for example, which and how many nouns participate in adjective modifier dependency relation, or exploring what are the must recurring type of noun phrases in corpus to better adequate a NLP system.
 
 %The choice of weights and similarity measures is also open for exploration. While in my research experience, no great improvement comes from changing from one to another, it is still interesting to understand in which task what parameters are the most appropriate. This is still an open research question in the domain.
 
-Concerning fusion techniques, a more principled way to determine what type of context with what type of fusion operation would indeed reduce the need for exploring the whole space of possibilities. Finally,  comparing said methods with other well-established dimension reduction approaches would be interesting to understand the trade-offs of lower performance versus dimension reduction, while focusing on not-so-large corpora. Indeed, if the new wave of distributional representations, or word embeddings, has a shortcoming is that empirically it does not perform as well on smaller corpus. This may represent an avenue of opportunity to methods such as feature fusion functions.
+Concerning fusion techniques, a more principled way to determine what type of context with what type of fusion operation would indeed reduce the need for exploring the whole space of possibilities. In the same sense, in the NER experiments, finding which fusion operators work best for each of the classes tested (location, organization, person, miscellaneous) in order to better exploit them in a single fusion operator. On the other hand, for WSI/WSD experiments, a more in-deep exploration of the senses found by each fusion operator may give us a layered overview of the textual properties according to each type of feature employed. Coupled with this exploration, a larger analysis on the contributions of each one of the parameters used in the fusion operators ($\alpha, \beta, \gamma$) would allow us to properly weight each feature type to each experimental setting.
+
+Comparing fusion methods with other well-established dimension reduction approaches would be interesting to understand the trade-offs of lower performance versus dimension reduction, while focusing on not-so-large corpora. Indeed, if the new wave of distributional representations, or word embeddings, has a shortcoming is that empirically it does not perform as well on smaller corpus. This may represent an avenue of opportunity to methods such as feature fusion functions.
 
 
 Regarding the network-based algorithm for WSI/WSD, a deeper errors' analysis would deep a larger glimpse on the behavior of nouns and verbs according to the context. Understanding what is the syntactic or lexical difference among contexts, which induce the good or bad performance of each type of feature could make the system more flexible to other text domains. Also, the hypergraph could be better leveraged by using hypergraph-specific methods, mainly through spectral analysis.
