--- a/Thesis_f.bib
+++ b/Thesis_f.bib
@@ -89,15 +89,20 @@ year= {2016},
   publisher = {CEUR-WS.org},
   year      = {2016}
 }
+
 @inproceedings{sorianoDS,
-  author    = {Edmundo-Pavel Soriano-Morales and Julien Ah-Pine and Sabine Loudcher},
-  title     = {Fusion Techniques for Named Entity Recognition and Word Sense Induction and Disambiguation},
-  booktitle = {{International Conference on Discovery Science (DS 2017)}},
+  author    = {Edmundo{-}Pavel Soriano{-}Morales and
+               Julien Ah{-}Pine and
+               Sabine Loudcher},
+  title     = {Fusion Techniques for Named Entity Recognition and Word Sense Induction
+               and Disambiguation},
+  booktitle = {{Discovery Science DS}},
   series    = {Lecture Notes in Computer Science},
-  pages     = {To appear},
+  volume    = {10558},
+  pages     = {340--355},
+  publisher = {Springer},
   year      = {2017}
 }
-
 
 
 @article{garten2010recent,
@@ -605,7 +610,6 @@ year= {2016},
   year      = {2010},
   month     = {{M}ay},
   publisher = {European Language Resources Association (ELRA)},
-  year     = {19-21},
   location  = {Valletta, Malta},
 }
 
@@ -904,7 +908,7 @@ publisher = "Wiley-Blackwell",
   booktitle = {Second Joint Conference on Lexical and Computational Semantics (*SEM), Volume 2: Proceedings of the Seventh International Workshop on Semantic Evaluation (SemEval 2013)},
   pages     = {689--694},
   publisher = {Association for Computational Linguistics},
-  year     = {2013-06},
+  year     = {2013},
   location  = {Atlanta, Georgia, USA},
   url       = {http://www.aclweb.org/anthology/S13-2113},
 }
@@ -993,7 +997,7 @@ publisher = "Wiley-Blackwell",
   pages        = {107--117},
   issn         = {0169-7552},
   acmid        = {297827},
-  year        = {1998-04},
+  year        = {1998},
   doi          = {10.1016/S0169-7552(98)00110-X},
   issue_date   = {April 1, 1998},
   journaltitle = {Comput. Netw. ISDN Syst.},
@@ -1034,7 +1038,6 @@ publisher = "Wiley-Blackwell",
   year      = {2008},
   month     = {may},
   publisher = {European Language Resources Association (ELRA)},
-  year     = {28-30},
   isbn      = {2-9517408-4-0},
   language  = {english},
   location  = {Marrakech, Morocco},
@@ -1225,7 +1228,6 @@ publisher = "Wiley-Blackwell",
   year      = {2010},
   month     = {{May}},
   publisher = {European Language Resources Association (ELRA)},
-  year     = {19-21},
   isbn      = {2-9517408-6-7},
   language  = {english},
   location  = {Valletta, Malta},
@@ -1261,7 +1263,6 @@ publisher = "Wiley-Blackwell",
   year      = {2008},
   month     = {{M}ay},
   publisher = {European Language Resources Association (ELRA)},
-  year     = {28-30},
   isbn      = {2-9517408-4-0},
   location  = {Marrakech, Morocco},
 }
@@ -1279,7 +1280,7 @@ publisher = "Wiley-Blackwell",
   author    = {Sagae, Kenji and Gordon, Andrew S.},
   title     = {Clustering {Words} by {Syntactic} {Similarity} {Improves} {Dependency} {Parsing} of {Predicate}-{Argument} {Structures}},
   booktitle = {International {Conference} on {Parsing} {Technologies} ({IWPT}-09)},
-  year     = {2009-10},
+  year     = {2009},
   keywords  = {The Narrative Group, Virtual Humans},
   location  = {Paris, France},
 }
@@ -1292,7 +1293,7 @@ publisher = "Wiley-Blackwell",
   pages        = {27--64},
   issn         = {1574-0137},
   acmid        = {2296057},
-  year        = {2007-08},
+  year        = {2007},
   issue_date   = {August, 2007},
   journaltitle = {Comput. Sci. Rev.},
   location     = {Amsterdam, The Netherlands, The Netherlands},
@@ -1646,7 +1647,7 @@ publisher = "Wiley-Blackwell",
   title        = {Dijkstra-WSA: A Graph-Based Approach to Word Sense Alignment},
   volume       = {1},
   pages        = {151-164},
-  year        = {2013-05},
+  year        = {2013},
   journaltitle = {Transactions of the Association for Computational Linguistics (TACL)},
   pubkey       = {TUD-CS-2013-0057},
 }
