--- a/TitlePage.tex
+++ b/TitlePage.tex
@@ -1,8 +1,9 @@
+% !TeX spellcheck = fr-moderne
 \begin{titlepage}
 \begin{center}
 \noindent {\large \textbf{UNIVERSITÉ DE LYON - LUMIÈRE LYON 2}} \\
 \vspace*{0.3cm}
-\noindent {\large \textbf{ECOLE DOCTORALE INFORMATIQUE ET MATHÉMATIQUES}} \\
+\noindent {\large \textbf{ÉCOLE DOCTORALE INFORMATIQUE ET MATHÉMATIQUES}} \\
 %\noindent \textbf{SCIENCES ET TECHNOLOGIES DE L'INFORMATION \\ ET DE LA COMMUNICATION} \\
 \vspace*{0.5cm}
 \noindent \LARGE \textbf{ T H È S E} \\
@@ -28,12 +29,12 @@
 %\noindent \large Soutenue publiquement le  devant le jury~:\\
 \vspace*{0.1cm}
 \end{center}
-\noindent \large \textbf{Devant le jury conmposé de :} \\
+\noindent \large \textbf{Devant le jury composé de :} \\
 \begin{center}
 \noindent \large 
 \begin{tabular}{ll}
       \textit{Rapporteurs :}	& \textbf{Marc El-Bèze}, Professeur Émérite, Université d'Avignon\\
-				& \textbf{Mathieu Roche}, Chercheur, CIRAD\\
+				& \textbf{Mathieu Roche}, Chercheur HDR, CIRAD\\
       \textit{Examinatrices :}	& \textbf{Farah Benamara Zitoune}, Maitresse de Conférences (HDR),\\
       &Université Paul Sabatier\\
       & \textbf{Sophie Rosset}, Directrice de Recherche, Université Paris-Sud \\
