--- a/formatAndDefs.tex
+++ b/formatAndDefs.tex
@@ -10,7 +10,7 @@
 
 % Euler for math and numbers
 \usepackage[euler-digits,small]{eulervm}
-
+\usepackage{imakeidx}
 %\AtBeginDocument{\renewcommand{\hbar}{\hslash}}
 \usepackage[left=1.3in,right=1.2in,top=1.1in,bottom=1.1in,includefoot,includehead,headheight=13.6pt]{geometry}
 %\parindent 0pt
@@ -235,3 +235,4 @@ urlcolor=linkcol %couleur des liens pour les url
 \newcommand\sstd{S^{\scriptscriptstyle T}}
 
 \newenvironment{abstractchap}{\itshape \paragraph{Abstract.}}{}
+\makeindex
